--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>DaniaDS</display-name>
+	<display-name>DaniaDS</display-name>
+  	
+  	
+  	<session-config>
+			<session-timeout>30</session-timeout>
+			<cookie-config>
+				<http-only>true</http-only>
+			</cookie-config>
+			<tracking-mode>COOKIE</tracking-mode>
+	</session-config>
+  
   <welcome-file-list>
     <welcome-file>index/index.jsp</welcome-file>
   </welcome-file-list>
