--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,53 @@
   <packaging>war</packaging>
   <name>DaniaDS</name>
   <dependencies>
-  <!-- MySQL database driver -->
+	
+	<!-- MySQL database driver -->
 	<dependency>
 		<groupId>mysql</groupId>
 		<artifactId>mysql-connector-java</artifactId>
 		<version>5.1.9</version>
 	</dependency>
+	
+	<dependency>
+       <groupId>javax.servlet</groupId>
+       <artifactId>javax.servlet-api</artifactId>
+       <version>3.1.0</version>
+       <scope>provided</scope>
+   </dependency>
+   <dependency>
+       <groupId>javax.servlet.jsp</groupId>
+       <artifactId>javax.servlet.jsp-api</artifactId>
+       <version>2.3.1</version>
+       <scope>provided</scope>
+   </dependency>
+   <dependency>
+       <groupId>javax.servlet.jsp.jstl</groupId>
+       <artifactId>javax.servlet.jsp.jstl-api</artifactId>
+       <version>1.2.1</version>
+       <scope>compile</scope>
+   </dependency>
+   <dependency>
+       <groupId>org.glassfish.web</groupId>
+       <artifactId>javax.servlet.jsp.jstl</artifactId>
+       <version>1.2.2</version>
+       <scope>compile</scope>
+       <exclusions>
+           <exclusion>
+               <groupId>javax.servlet</groupId>
+               <artifactId>servlet-api</artifactId>
+           </exclusion>
+           <exclusion>
+               <groupId>javax.servlet.jsp</groupId>
+               <artifactId>jsp-api</artifactId>
+           </exclusion>
+           <exclusion>
+               <groupId>javax.servlet.jsp.jstl</groupId>
+               <artifactId>jstl-api</artifactId>
+           </exclusion>
+       </exclusions>
+   </dependency>
+	
   </dependencies>
   
   <build>
