--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -21,6 +21,12 @@
     <servlet-class>login_out/logoutServlet.java</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
+   <servlet>
+    <servlet-name>searchCustomer</servlet-name>
+    <servlet-class>employee/searchCustomer.java</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  
   <servlet>
     <servlet-name>checkYourPrivilages</servlet-name>
     <servlet-class>checkFuntions/checkYourPrivilages.java</servlet-class>
@@ -31,7 +37,11 @@
     <servlet-class>adminFucntions/roleAdmin.java</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
-  
+  <servlet>
+    <servlet-name>adminUsers</servlet-name>
+    <servlet-class>adminFucntions/adminUsers.java</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
   <context-param>
     <param-name>dbUser</param-name>
     <param-value>21458</param-value>
