--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -31,12 +31,17 @@
     <servlet-class>employee/sentApplication.java</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
-    <servlet>
+  <servlet>
+    <servlet-name>editApplication</servlet-name>
+    <servlet-class>employee/editApplication.java</servlet-class>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
+  
+  <servlet>
     <servlet-name>approveServlet</servlet-name>
     <servlet-class>employee/approveServlet.java</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
-  
   <servlet>
     <servlet-name>checkYourPrivilages</servlet-name>
     <servlet-class>checkFuntions/checkYourPrivilages.java</servlet-class>
